--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: "Quicksand", sans-serif; /*Specify which one*/
-    background: #1c1c1c;
+    background: #000235;
     color: #fff;
 }
 
